[gd_scene load_steps=2 format=3 uid="uid://ckv567ttgkrsb"]

[ext_resource type="Script" path="res://Scripts/textChoice.gd" id="1_h77rb"]

[node name="textOption" type="Panel"]
custom_minimum_size = Vector2(0, 120)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 190.0
offset_right = -190.0
offset_bottom = -600.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(450, 60)
size_flags_horizontal = 3
size_flags_vertical = 4
script = ExtResource("1_h77rb")

[node name="textMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 32

[node name="textOptionText" type="RichTextLabel" parent="textMargin"]
clip_contents = false
layout_mode = 2
mouse_filter = 1
bbcode_enabled = true
text = "test2"
scroll_active = false

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
